The hamburger menu icon is now animated, rotating on expansion and collapse to provide a smoother user experience. Additionally, the button hover effect has been fixed to prevent any change in size, ensuring a stable and consistent UI. These changes improve the overall visual quality and interaction of the application.

--- a/shopping-cart/src/components/Navbar.css
+++ b/shopping-cart/src/components/Navbar.css
@@ -52,6 +52,52 @@
 
 .menu-icon {
   display: none;
+  width: 30px;
+  height: 22.5px;
+  position: relative;
+  transform: rotate(0deg);
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+.menu-icon span {
+  display: block;
+  position: absolute;
+  height: 4.5px;
+  width: 100%;
+  background: var(--main-text);
+  border-radius: 4.5px;
+  opacity: 1;
+  left: 0;
+  transform: rotate(0deg);
+  transition: .25s ease-in-out;
+}
+
+.menu-icon span:nth-child(1) {
+  top: 0px;
+}
+
+.menu-icon span:nth-child(2) {
+  top: 9px;
+}
+
+.menu-icon span:nth-child(3) {
+  top: 18px;
+}
+
+.menu-icon.open span:nth-child(1) {
+  top: 9px;
+  transform: rotate(135deg);
+}
+
+.menu-icon.open span:nth-child(2) {
+  opacity: 0;
+  left: -30px;
+}
+
+.menu-icon.open span:nth-child(3) {
+  top: 9px;
+  transform: rotate(-135deg);
 }
 
 .input-group {
